removed overlapping issue

--- a/src/Components/Home/index.css
+++ b/src/Components/Home/index.css
@@ -45,7 +45,7 @@
 }
 
 .elements-wrapper{
-	width: 25%;
+	width: 340px;
 	height: 35vh;
 	margin-left: 5px;
 	margin-right: 5px;
@@ -95,18 +95,12 @@ select{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	cursor: move;
+	user-select: none;
 }
 
-.draggable-div{
-	height: 30px;
-    box-shadow: 1px 2px 3px #ccc;
-    width: 70px;
-    border: 1px solid #ccc;
-    color: #877;
-    cursor: move;
-    text-align: center;
-    margin-top: 10px;
-    user-select: none;
+.chart-element-header:hover{
+	cursor: move;
 }
 
 #brandingLogo{
